--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.36.0",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
