--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^1.36.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
+    "next-auth-sanity": "^1.4.4",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
